<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/rosaP"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".termsConditionsActivity"
        android:background="@color/lavanda">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/text_termsConditions"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textColor="@color/azulito"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/text_terminos_condiciones"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/botonRegresar"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/button_back"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/lilaPastelOscuro"
            android:onClick="backTermsConditions"
            />

    </LinearLayout>
</ScrollView>
